--- a/css/styles.css
+++ b/css/styles.css
@@ -4561,7 +4561,7 @@ input[type='button'].btn-block {
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
   color: #495057;
-  background-color: #fff;
+  background-color: rgb(3, 2, 2);
   border-color: #dee2e6 #dee2e6 #fff;
 }
 
@@ -8369,6 +8369,7 @@ button.bg-dark:focus {
   right: 0;
   left: 0;
   z-index: 1030;
+
 }
 
 .fixed-bottom {
